# PhanHoaiNam_ThucTap

./: README.md
lap1/: DanhBa.py  averagePlus.py  danhba.json  fibonacci.py  mergeSort.py  songuyento.py
lap2/: Library.py  library_data.json  user.py  users.json
lap2/test/: libary.py
lap3/fastapi_demo_project/: pyproject.toml  test.db
lap3/fastapi_demo_project/fastapi_demo_project/: crud.py  database.py  main.py  models.py  schemas.py
lap3/poetry_demo/: demo.txt  pyproject.toml
lap3/poetry_demo/calc_demo_project/: __init__.py
lap3/poetry_demo/file_io_demo/: __init__.py
lap3/poetry_demo/http_demo/: __init__.py
lap3/poetry_demo/numpy_demo/: __init__.py
lap3/poetry_demo/time_demo/: __init__.py
lap4/: tesx.py
lap5/Test_API/: pyproject.toml
lap5/Test_API/test_api/: __init__.py  app.py  models.py
lap5/Test_API/test_api/instance/: library.db
lap5/demoThread/: pyproject.toml
lap5/demoThread/demothread/: __init__.py
lap5/instance/: library.db
