[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["NamHayCode <phanhoainam.work@gmail.com>"]
readme = "README.md"
packages = [{include = "my", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pendulum = "^3.0.0"
httpx = "^0.27.2"
tabulate = "^0.9.0"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
